--- a/order-test.yml
+++ b/order-test.yml
@@ -6,5 +6,10 @@ spring:
     username: root
     password: 5218791
     url: jdbc:mysql://127.0.0.1:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
+  rabbitmq:
+    host: 192.168.88.134
+    port: 5672
+    username: guest
+    password: guest
 env:
   test
