--- a/product-dev.yml
+++ b/product-dev.yml
@@ -6,3 +6,9 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+  rabbitmq:
+    host: 192.168.88.134
+    port: 5672
+    username: guest
+    password: guest
+    
