--- a/product-dev.yml
+++ b/product-dev.yml
@@ -4,6 +4,9 @@ spring:
     username: root
     password: 5218791
     url: jdbc:mysql://127.0.0.1:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
+  redis:
+    host: localhost
+    port: 6379
   jpa:
     show-sql: true
   rabbitmq:
