--- a/product-dev.yml
+++ b/product-dev.yml
@@ -5,7 +5,7 @@ spring:
     password: 5218791
     url: jdbc:mysql://127.0.0.1:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
   redis:
-    host: localhost
+    host: 192.168.88.134
     port: 6379
   jpa:
     show-sql: true
