--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -1,12 +1,12 @@
 spring:
+  application:
+     name: api-getway
   zuul:
     routes:
       myProduct:
         path: /myProduct/**
         serviceId: product
         sensitiveHeaders:
-        #sesitiveHeaders 对cookie进行转发
-#忽略路由 ignored-patterns:
     management:
       security:
         enabled: false
